syntax = "proto3";

package evntsrc.streams;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/api/annotations.proto";

// Enable custom Marshal method.
option (gogoproto.marshaler_all) = true;
// Enable custom Unmarshal method.
option (gogoproto.unmarshaler_all) = true;
// Enable custom Size method (Required by Marshal and Unmarshal).
option (gogoproto.sizer_all) = true;
// Enable registration with golang/protobuf for the grpc-gateway.
option (gogoproto.goproto_registration) = true;
// Enable generation of XXX_MessageName methods for grpc-go/status.
option (gogoproto.messagename_all) = true;

message Stream {
	int32 id = 1 [(gogoproto.moretags) = "bson:\"_id\""];
	string cluster = 2;
	string name = 3;
	string owner = 4;
	string icon = 5;
	string color = 6;
	map<string,bytes> metadata = 8;
}

message SearchRequest {
	string query = 1;
}

message StreamList {
	repeated Stream streams = 1;
}

message Empty {}

message GetRequest {
	int32 id = 1;
}

message IdList {
	repeated int32 id = 1;
}

service StreamsService {
	rpc Create(Stream) returns (Stream) {
		option (google.api.http) = {
            post: "/v1/stream",
            body: "*"
        };
	};
	
	rpc List(Empty) returns (StreamList) {
		option (google.api.http) = {
			get: "/v1/streams",
		};
	}

	
	rpc Get(GetRequest) returns (Stream) {
		option (google.api.http) = {
			get: "/v1/stream/{id}",
		};
	}
	
	rpc Update(Stream) returns (Stream) {
		option (google.api.http) = {
			post: "/v1/stream/{id}"
			body: "*"
		};
	};
	
	rpc Delete(Stream) returns (Empty) {
		option (google.api.http) = {
			delete: "/v1/stream/{id}"
		};
	}

	//Admin
	rpc ListIds(SearchRequest) returns (IdList);
}